# Convertor

./: CMakeLists.txt
Convertor/: CMakeLists.txt  constants.h  graph.h  hashmap.h  main.c  parser.h  postfix.h  slice.h  str.h  strings.h  structures.h  utilities.h  variable.h  variables.h  vector.h
Convertor/Assets/Tests/: first_test.tirac
